# deploy-dbt

./: .user.yml  README.md  catalog.json  example.env  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  profiles.yml  pyproject.toml  run_results.json
compiled/northwind/models/raw/: raw_order_details.sql  raw_orders.sql
compiled/northwind/models/reports/: report_clients_to_marketing.sql  report_customers.sql  report_receitas_acumuladas.sql  report_top_10_products.sql  report_total_revenues_1997.sql  report_total_revenues_per_customer.sql  report_total_revenues_per_customer_group.sql  report_uk_clients_who_pay_more_than_1000.sql
compiled/northwind/models/staging/: stg_customers.sql  stg_order_details.sql  stg_orders.sql  stg_products.sql
compiled/northwind/models/staging/_crm__models.yml/: not_null_stg_order_details_order_id.sql  not_null_stg_order_details_product_id.sql  not_null_stg_order_details_quantity.sql  not_null_stg_order_details_unit_price.sql
northwind/: .user.yml  dbt_project.yml
northwind/models/reports/: report_total_revenues_1997.sql
northwind/models/staging/: stg_customers.sql
