[project]
name = "deploy-dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato Macedo",email = "renatolmb@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.10.13,<2.0.0)",
    "dbt-postgres (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
